# simple-imsrg-pairing

./: LICENSE  README.md  pyproject.toml
simple_imsrg_pairing/: __init__.py  basis.py  hamiltonian.py  hartree_fock.py  mbpt.py  normal_order.py  operators.py
